--- a/package.json
+++ b/package.json
@@ -6,9 +6,8 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "build:dev": "vite build --mode development",
-    "lint": "eslint .",
-    "preview": "vite preview"
+    "build:extension": "vite build && npm run copy-files",
+    "copy-files": "cp manifest.json background.js content.js data.json dist/ && cp -r icons dist/ 2>/dev/null || true"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
@@ -67,6 +66,7 @@
     "@types/node": "^22.16.5",
     "@types/react": "^18.3.23",
     "@types/react-dom": "^18.3.7",
+    "@vitejs/plugin-react": "^5.0.4",
     "@vitejs/plugin-react-swc": "^3.11.0",
     "autoprefixer": "^10.4.21",
     "eslint": "^9.32.0",
@@ -78,6 +78,7 @@
     "tailwindcss": "^3.4.17",
     "typescript": "^5.8.3",
     "typescript-eslint": "^8.38.0",
-    "vite": "^5.4.19"
+    "vite": "^7.1.9",
+    "vite-plugin-web-extension": "^4.4.5"
   }
 }
